# mdsherry.github.io

./: Cargo.toml  README.md  index.html  start_server.sh
assets/: manifest.json
docs/: CNAME  burnside.js  burnside_bg.wasm  index.html
src/: app.rs  lib.rs  main.rs
src/app/: about.rs  bag_draw.rs  downloader.rs  palettes.rs  ring.rs  tile.rs
src/app/ring/: permutation.rs
src/app/tile/: permutation.rs  transforms.rs
