[package]
name = "burnside"
version = "0.1.0"
authors = ["Mark Sherry"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = "0.19" # Gives us egui, epi and web+native backends
image = "0.24"
serde = { version = "1", features = ["derive"] }
bitvec = "1"
serde_json = "1.0"
wasm-bindgen = "0.2.83"

# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tracing-subscriber = "0.3"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.6"
tracing-wasm = "0.2"

[features]
default = []
# http = ["eframe/http"] # Enable if you want to do http requests
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }
